--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
 	"type": "module",
-	"devDependencies": {
-		"@adraffy/blocksmith": "^0.1.52",
-		"@types/bun": "latest"
+	"scripts": {
+		"test": "node test/mainnet.js"
 	},
-	"peerDependencies": {
-		"typescript": "^5"
+	"devDependencies": {
+		"@adraffy/blocksmith": "^0.1.52"
 	}
 }
